fixing styling for x overflow

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -54,3 +54,7 @@ body {
 //     grid-template-columns: 1fr 4fr;
     
 // }
+
+.fix-overflow-x {
+    overflow-x: hidden;
+}
